<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="48sp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvMotiveSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/change_mode"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMode"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/mode" />

        <Spinner
            android:id="@+id/spMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvDimensionsSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/generated_codes_dimensions"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWidth"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/width" />

        <SeekBar
            android:id="@+id/sbWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvWidthPixels"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/_1024_px" />

    </LinearLayout>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/height" />

        <SeekBar
            android:id="@+id/sbHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvHeightPixels"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/_1024_px" />

    </LinearLayout>

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvPathSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/generated_codes_path"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPath"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/file_path" />

        <EditText
            android:id="@+id/etFilePath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>